src/objects/ContentDirectory__c.object
<CustomObject>
    <description>SFDC1-4384 Content Directory is the object holding the directory for the MarkitSERV documentation customer portal</description>
    <fields>
        <fullName>ClearingBrokersandFCMs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if Clearing Brokers and FCM&apos;s</description>
        <inlineHelpText>Check if Clearing Brokers and FCM&apos;s</inlineHelpText>
        <label>Clearing Brokers and FCM&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearinghouses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if Clearing houses</description>
        <inlineHelpText>Check if Clearing houses</inlineHelpText>
        <label>Clearinghouses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if Dealer</description>
        <inlineHelpText>Check if Dealer</inlineHelpText>
        <label>Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if the user is End User</description>
        <inlineHelpText>Check if user is End User</inlineHelpText>
        <label>End User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecutionVenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if Execution Venue</description>
        <inlineHelpText>Check if Execution Venue</inlineHelpText>
        <label>Execution Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiddenFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Checked if the folder is Hidden Folder</description>
        <inlineHelpText>Check if the folder is Hidden Folder</inlineHelpText>
        <label>Hidden Folder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JiraID__c</fullName>
        <description>SFDC1-4384 Jira Id associated with this Content Directory</description>
        <inlineHelpText>Fill in Jira Id associated with this Content Directory</inlineHelpText>
        <label>Jira ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-4384 Id of the old system</description>
        <externalId>true</externalId>
        <inlineHelpText>Fill in Id of the old system</inlineHelpText>
        <label>LegacyID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4384 Child to standard object Content Directory</description>
        <inlineHelpText>Select associated Content Directory</inlineHelpText>
        <label>Parent</label>
        <referenceTo>ContentDirectory__c</referenceTo>
        <relationshipLabel>Content Directories</relationshipLabel>
        <relationshipName>ContentDirectories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>SFDC1-4384 Platform the document is related to</description>
        <inlineHelpText>Fill in the platform the document is related to</inlineHelpText>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>platformdealhubposttrade</fullName>
                </value>
                <value>
                    <fullName>platformdealhubtrading</fullName>
                </value>
                <value>
                    <fullName>platformdms</fullName>
                </value>
                <value>
                    <fullName>platformdsmatch</fullName>
                </value>
                <value>
                    <fullName>platformfxbrokeraffirmation</fullName>
                </value>
                <value>
                    <fullName>platformfxcentralised–affirmationsconfirmationsclearing</fullName>
                </value>
                <value>
                    <fullName>platformfxclearing</fullName>
                </value>
                <value>
                    <fullName>platformfxoptionsconfirmationsandexercisemanagement</fullName>
                </value>
                <value>
                    <fullName>platformfxtradestp</fullName>
                </value>
                <value>
                    <fullName>platformmarkitwire</fullName>
                </value>
                <value>
                    <fullName>platformmets</fullName>
                </value>
                <value>
                    <fullName>platformnovationconsent</fullName>
                </value>
                <value>
                    <fullName>platformtrademanager</fullName>
                </value>
                <value>
                    <fullName>platformtradeserv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserTypes__c</fullName>
        <description>SFDC1-4384 User Types the document is related to</description>
        <inlineHelpText>Fill in the User Types the document is related to</inlineHelpText>
        <label>User Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VendorSoftware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Vendor Software the document is related to</description>
        <inlineHelpText>Fill in the Vendor Software the document is related to</inlineHelpText>
        <label>Vendor Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4384 Vendor the document is related to</description>
        <inlineHelpText>Fil in the Vendor the document is related to</inlineHelpText>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <label>Content Directory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Platform__c</columns>
        <columns>ClearingBrokersandFCMs__c</columns>
        <columns>Clearinghouses__c</columns>
        <columns>Dealer__c</columns>
        <columns>EndUser__c</columns>
        <columns>ExecutionVenue__c</columns>
        <columns>Vendor__c</columns>
        <columns>VendorSoftware__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>